Applied fixes in Admin Page   - Alignment of Table Applied fixes in Course page    -Alignment of Calender View

--- a/web/css/imascore.css
+++ b/web/css/imascore.css
@@ -28,8 +28,8 @@ div.item {
     /*padding-right: 5%;*/
     padding-top: 20px;
     padding-left: 15px;
-    margin-left: 80px;
     min-height: 100px;
+    overflow: auto;
     /*border-radius: 5px;*/
 }
 div.signup {
